k8s/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
---
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden
---
apiVersion: v1
kind: Namespace
metadata:
  name: gitea
---
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
---
apiVersion: v1
kind: Namespace
metadata:
  name: immich
---
apiVersion: v1
kind: Namespace
metadata:
  name: audiobookshelf
